# Financial-Models-Numerical-Methods

./: .flake8  .gitignore  1.1 Black-Scholes numerical methods.ipynb  1.2 Black-Scholes PDE and sparse matrices.ipynb  1.2 SDE simulations and more.ipynb  1.2 SDE simulations and statistics.ipynb  1.3 Exotic options.ipynb  1.3 Fourier transform methods.ipynb  1.4 American Options.ipynb  1.4 SDE - Heston model.ipynb  1.5 SDE - Lévy processes.ipynb  2.1 Black-Scholes PDE and sparse matrices.ipynb  2.1 SDE simulations and more.ipynb  2.2 Exotic options.ipynb  2.3 American Options.ipynb  3.1 Merton jump-diffusion, PIDE method.ipynb  3.2 Variance Gamma model, PIDE method.ipynb  3.3 Pricing with the NIG Process.ipynb  4.1 Option pricing with transaction costs.ipynb  4.2 Volatility smile and model calibration.ipynb  5.1 Kalman regression.ipynb  5.1 Linear regression - Kalman filter.ipynb  5.2 Kalman auto-correlation tracking - AR(1) process.ipynb  5.2 Stochastic volatility - Kalman filter.ipynb  5.3 Volatility tracking.ipynb  6.1 Ornstein-Uhlenbeck process and applications.ipynb  7.1 Classical MVO .ipynb  7.1 Classical MVO.ipynb  8.1 Backtesting Trading Strategy.ipynb  A.1 Solution of linear equations.ipynb  A.2 Optimize and speed up the code. (SOR algorithm, Cython and C).ipynb  Backtesting.ipynb  CITATION.cff  Dockerfile  Financial-Models-Numerical-Methods-master_1.1 Black-Scholes numerical methods.ipynb  Fourier transform methods.ipynb  Heston model (Kalman).ipynb  NIG Process.ipynb  Option pricing with transaction costs.ipynb  README.md  (+13 more)
.github/: FUNDING.yml
src/C/: BS_sor  (+3 more)
(+48 files in other folders)
